--- a/commands.html
+++ b/commands.html
@@ -109,41 +109,276 @@
         </header>
         <!-- /header -->
 
-        <!-- page -->
-        <div class="page-full">
-            <br><br><br><br><br>
-            <ul style="font-size: 20px;line-height: 2;">
-                <li><a href="main.html">Main</a></li>
-                <li><a href="cryptoaccounts.html">Cryptoaccounts</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="payments.html">Payments</a></li>
-                <li><a href="cards.html">Cards</a></li>
-                <li><a href="iban.html">new IBAN</a></li>
-                <li>___OLD PAGES___</li>
-                <li><a href="help-main.html">Help main</a></li>
-                <li><a href="help.html">Help</a></li>
-                <li><a href="legal.html">Legal</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="summary.html">Q&A summary</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
-                <li><a href="fees.html">Fees</a></li>
-                <li>___NEW PAGES___</li>
-                <li><a href="STO.html">STO</a></li>
-                <li><a href="roadmap.html">Roadmap</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="pitch.html">Pitch</a></li>
-                <li><a href="partnerships.html">Partnerships</a></li>
-                <li><a href="overview.html">Overview</a></li>
-                <li><a href="bounty.html">Bounty</a></li>
-                <li><a href="ld.html">Landing</a></li>
-                <li><a href="commands.html">Commands</a></li>
-                <li>___POPUPS___</li>
-                <li><a href="" class="js-popup-open" data-popup="popup-read">Popup read</a></li>
-                <li><a href="" class="js-popup-open" data-popup="popup-main">Popup main</a></li>
-
-            </ul>
+        <!--main-teams-head-box-->
+        <div class="main-teams-head-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap text-body-large">
+                    <h1 class="main-title"><span class="title-gradient">Our Global Team</span></h1>
+                    <p>A team of highly skilled professionals who are enthusiastic and fully committed to the project</p>
+                </div>
+                <div class="items-inner-wrap">
+                    <div class="items-wrap">
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-total text-body-small">
+                                <div class="tile-total-value h1-title title-gradient title-first">50</div>
+                                <div class="tile-total-title">team members <br> in&nbsp;total</div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-total text-body-small">
+                                <div class="tile-total-value h1-title title-gradient title-second">30</div>
+                                <div class="tile-total-title">developers <br>and tech teams</div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-total text-body-small">
+                                <div class="tile-total-value h1-title title-gradient title-third">5</div>
+                                <div class="tile-total-title">community <br>managers</div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                        <!--item wrap-->
+                        <div class="item-wrap">
+                            <div class="item-tile-total text-body-small">
+                                <div class="tile-total-value h1-title title-gradient title-four">11</div>
+                                <div class="tile-total-title">Regional <br>representatives</div>
+                            </div>
+                        </div>
+                        <!--/item wrap-->
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- /page -->
+        <!--/main-teams-head-box-->
+
+        <!--teams-tiles-box-->
+        <div class="teams-tiles-box cnt-section">
+            <div class="inner-wrap">
+                <div class="main-title-wrap text-body">
+                    <h2 class="h4-title">Project team</h2>
+                </div>
+                <div class="items-wrap">
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team01.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Igor Chugunov</div>
+                                <p>Founder</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team02.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">David Kolmakhidze</div>
+                                <p>Chief Operating Officer</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team03.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Dmitry Chernishev</div>
+                                <p>Chief Technology Officer</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team04.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Arjan Eikelenboom</div>
+                                <p>Partnership Director</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                </div>
+                <div class="main-title-wrap text-body">
+                    <h2 class="h4-title">Devoloping team</h2>
+                </div>
+                <div class="items-wrap">
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team05.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Mikhail Merezhkin</div>
+                                <p>Head of Web development</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team06.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Michael Kapilkov</div>
+                                <p>Blockchain Advisor, <br>New York</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team07.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Andrei Malchanau</div>
+                                <p>Head of Partnerships <br>Europe</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team08.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Evgeny Butyaev</div>
+                                <p>Technical Advisor</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-team text-body-min">
+                            <div class="tile-photo-wrap">
+                                <div class="tile-photo photo-cover">
+                                    <img src="./img/team09.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="tile-info-wrap">
+                                <div class="tile-title h6-title">Sergey Kondrashov</div>
+                                <p>Head of Architecture <br>Department</p>
+                                <div class="tile-soc-wrap">
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc001.svg" alt="">
+                                    </a>
+                                    <a href="" class="btn-action-ico ico-soc">
+                                        <img src="./img/icons/soc002.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                </div>
+            </div>
+        </div>
+        <!--/teams-tiles-box-->
 
 
         <!-- footer -->
